required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version
---------------

Version 5.4.0-rc1 (2009-04-08):
-------------------------------

- SWF: test missing when creating EllipseButtons (#2966)

- clean up GEOS init and cleanup functions (#2929) 

- Fixed writing of VALIDATION block in msSaveMap() (#2970)


Version 5.4.0-beta4 (2009-04-01):
---------------------------------

- Made sure computation of default symbol size is consistent will older versions (#2963)

- Improved security relative to untrusted directories and mapfiles (RFC 56)

- Fixed several security issues found in an audit of the CGI application (#2939, #2941, #2942, #2943, #2944)

- setConnectionType(MS_WMS) doesn't work with mapscript (#2908)

- Properly reset filter/filteritem when queryByAttribute() fails (#2808)

- WMS GetImage and GetLegendGraphic formats should advertise AGG driver (#2957)

- PHP: add missing binding constant (#2949)

- SLD: Correct non validating SLD (#2915)

- Fixed problem with mode=nquery on connectiontype WFS layers (#2885)

Version 5.4.0-beta3 (2009-03-05):
---------------------------------

- SLD: Correct crash with large class names (#2915)

- Added Java MapScript WIN64 support (#2250)

- Fixed a problem with long running processes, embedded scalebars/legends and AGG. (#2887)

- Applied patch to deal with a couple of WCS issues (time ranges, #2487) and PostGIS tileindex-based time filters (#1856)

- Adding -DUSE_GENERIC_MS_NINT to the WIN64 MapScript builds (#2250)

- Fixed C# the compiler options for MSVC 2008 (#2910)

- Fix build problem with mapogcsld.c when OWS services are not available (#473)

- Fix build on windows (maputil.c)

- fix time advertising in WMS 1.3.0 (#2935)
